Reviving the playground
Updating Gradle and adding a new Sandbox module.
The sandbox is where anything too small for its own project will go.

The first addition is a dirt simple graph implementation with some traversal algorithms.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-rootProject.name = 'java-data-playground'
-include 'fake-data', 'csv', 'parquet', 'spark', 'arrow'
+rootProject.name = 'java-playground'
+include 'fake-data', 'csv', 'parquet', 'spark', 'arrow', 'sandbox'
