Locking sandbox to Java 17
I'm starting to use some fun stuff from Java 17 like record classes.

--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'kwas.java-base'
 }
 
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
